fixed layout overflow bug

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
 body {
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
   color: #333;
 }
 
@@ -14,26 +15,12 @@ body {
   text-align: center;
 }
 
+
 .info-card {
   display: flex;
   flex-direction: column;
   max-width: 300px;
-  height: 600px;
+  height: 550px;
   text-align: center;
 }
 
-.info-card > h1 {
-  margin: 0;
-  padding: 0;
-  font-size: 25px;
-}
-
-.info-card > p {
-  font-family: "Segeo UI" , "Noto Sans JP", sans-serif;
-}
-
-.truncate {
-  display: -webkit-box;
-  -webkit-line-clamp: 6;
-  -webkit-box-orient: vertical
-}
